<resources>
    <string name="app_name">Naviku</string>
    <string name="flash_auto">Flash</string>
    <string name="zoom2x">Zoom 2 Kali</string>
    <string name="kodeku">Halaman Kodeku</string>
    <string name="settings">Settings</string>
    <string name="buat">Buat Kode Pribadi</string>
    <string name="unduh">Unduh Kode</string>
    <string name="kirim">Kirim Kode</string>
    <string name="hapus">Hapus Kode</string>
    <string name="beranda">Kembali ke Halaman Beranda</string>
    <string name="naviku">Naviku</string>
    <string name="halaman_kodeku">Halaman Kodeku</string>
    <string name="default_hasil">Lakukan Pemindaian dengan mengarahkan kamera ke QR Code  </string>
    <string name="deskripsi_head">Deskripsi Kode QR</string>
    <string name="deskripsi_subhead">Silakan mengisi kotak input dibawah dengan teks yang Anda inginkan.</string>
    <string name="hint_input">Silakan mengisi kotak input dengan teks yang Anda inginkan.</string>
    <string name="Button_Simpan">Simpan Kode QR</string>
    <string name="deleted">Satu QR code berhasil dihapus</string>
    <string name="kodepribadi">Kode Pribadi, Kumpulan Kode QR buatan sendiri</string>
    <string name="kodenviku">Kode Naviku, Kumpulan Kode QR dari Naviku</string>
    <string name="kembali">kembali</string>
    <string name="belum_ada_data">Belum ada kode QR yang dibuat</string>


    <string-array name="data_category">
        <!--        <item>Kode Pribadi</item>-->
        <item>Ruangan</item>
        <item>Bangunan </item>
        <item>Benda</item>
        <item>Rambu</item>
        <item>Angka</item>
    </string-array>

    <integer-array name="data_icon">
        <!--        <item>@drawable/kode_pribadi</item>-->
        <item>@drawable/ruangan_icon</item>
        <item>@drawable/tabler_building</item>
        <item>@drawable/benda_icon</item>
        <item>@drawable/rambu_icon</item>
        <item>@drawable/angka_icon</item>
    </integer-array>
</resources>


    <!--<item>Bangunan </item>-->
    <!--<item>Benda</item>-->
    <!--<item>Rambu</item>-->
    <!--<item>Angka</item>-->
    <!--<item>@drawable/tabler_building</item>-->
    <!--<item>@drawable/benda_icon</item>-->
    <!--<item>@drawable/rambu_icon</item>-->
    <!--<item>@drawable/angka_icon</item>-->