<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_01"
    tools:context=".ui.kodeku.Kodeku">

    <ImageView
        android:id="@+id/iv_code_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/kodeqr_nodata"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_code_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_code_img"
        app:layout_constraintStart_toStartOf="@+id/iv_code_img"
        app:layout_constraintTop_toBottomOf="@+id/iv_code_img"
       android:text="Nama QR Code" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/black_02"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="18dp"
        android:paddingTop="16dp"
        android:paddingBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_download_code_detail"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:background="@color/black_02"
            android:contentDescription="@string/buat"
            app:srcCompat="@drawable/unduh" />

        <ImageButton
            android:id="@+id/btn_share_code_detail"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:background="@color/black_02"
            android:contentDescription="@string/kirim"
            app:srcCompat="@drawable/kirim" />

        <ImageButton
            android:id="@+id/btn_delete_code_detail"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:background="@color/black_02"
            android:contentDescription="@string/hapus"
            app:srcCompat="@drawable/delete" />

        <ImageButton
            android:id="@+id/btn_kembali_code_list"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:background="@color/black_02"
            android:contentDescription="@string/beranda"
            app:srcCompat="@drawable/kembali" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>