<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_01"
    tools:context=".ui.add.AddActivity">


  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/purple_dark"
      android:elevation="4dp"
      app:layout_constraintTop_toTopOf="parent"
      app:title="Buat Kode QR" />

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="24dp"
      android:orientation="vertical"
      android:layout_marginVertical="24dp"
      android:layout_marginHorizontal="48dp"
      app:layout_constraintBottom_toBottomOf="@id/linearLayout3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar"
      app:layout_constraintVertical_bias="0.093">

    <TextView
        android:id="@+id/desk_head"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="start"
        android:text="@string/deskripsi_head"
        android:textColor="@color/white_01"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/edittext_border"
        android:gravity="top"
        android:hint="@string/hint_input"
        android:inputType="textMultiLine"
        android:lineHeight="30sp"
        android:minLines="3"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/white_01"
        android:contentDescription="Kotak Input"
        android:textColorHint="@color/white_01" />


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:text="@string/Button_Simpan"
        />


  </LinearLayout>

  <LinearLayout
      android:id="@+id/linearLayout3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="24dp"
      android:orientation="vertical"
      android:layout_marginVertical="24dp"
      android:layout_marginHorizontal="48dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
      >
    <ImageView
        android:id="@+id/ImageQRCode"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/kodeqr_nodata"
        android:contentDescription="Kode QR"
        app:layout_constraintStart_toStartOf="parent"/>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>